# QRCraft

./: .gitignore  Cargo.toml  Readme.md  package.json
.github/: Funding.yml
.github/workflows/: ghpages.yml
projects/ascii-art-core/src/: errors.rs
projects/ascii-art-core/src/canvas/: draw.rs  save.rs
projects/ascii-art-core/tests/: main.rs
projects/lego-art-core/: Cargo.toml
projects/lego-art-core/src/render/: data.rs
projects/lego-art-core/src/themes/: builder.rs  mod.rs
projects/lego-art-web/: Cargo.toml
projects/mosaic-craft-cli/: Cargo.toml
projects/mosaic-craft-cli/tests/: main.rs
projects/mosaic-craft-core/: Cargo.toml
projects/mosaic-craft-core/src/: errors.rs  lib.rs
projects/mosaic-craft-core/src/canvas/: draw.rs  mod.rs  save.rs
projects/mosaic-craft-core/src/render/: data.rs  mod.rs  renderers.rs
projects/mosaic-craft-core/src/themes/: builder.rs  mod.rs
projects/mosaic-craft-core/tests/: main.rs
projects/mosaic-craft-themes/minecraft2d/: download.m  mosaic-craft-theme.json
projects/mosaic-craft-themes/minecraft3d/: download.m  mosaic-craft-theme.json
projects/mosaic-craft-web/: Cargo.toml
