[package]
name = "mosaic-craft"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/GalAster/mosaic-craft"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
mosaic-craft-core = {version = "0.1", path = "../mosaic-craft-core"}

[dev-dependencies]
clap = "3.0.0-beta.2"

[features]
default = []